--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9b74b71150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f59888c2d10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b75122290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9b75122490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5988bad1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5988bad3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b756ccb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9b756ccd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f598915da50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f598915dc50&gt;]</pre>
 </div>
 
 </div>
