--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f59888c2d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f02e2c5ef50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5988bad1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5988bad3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f02e2f31590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f02e2f31790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f598915da50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f598915dc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f02e34d6e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f02e34d6fd0&gt;]</pre>
 </div>
 
 </div>
