--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5ee67b7d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe4eacbf5d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5edff2710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5edff2910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4eace6290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe4eace64d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5ee596f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5ee5a41d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4eb295c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe4eb295e50&gt;]</pre>
 </div>
 
 </div>
