--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe78cbce350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f92f87057d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe78cf74210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe78cf74410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f92f8b23490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f92f8b23690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe78d516b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe78d516d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f92f9120dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f92f90cafd0&gt;]</pre>
 </div>
 
 </div>
