--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdaa427ac10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3031c10110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdaa3f71290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdaa3f71490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3030c62390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3030c62590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdaa4518c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdaa4518e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3031209c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3031209e50&gt;]</pre>
 </div>
 
 </div>
