--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5f0bc94150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f18830fc750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f0c0a5250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5f0c0a5450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1882a6d2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1882a6d4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f0c655ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5f0c655cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f188301cb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f188301cd50&gt;]</pre>
 </div>
 
 </div>
