--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a9f4f2550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd69f1ae090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a9f911490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7a9f911690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd69f5b7450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd69f5b7650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a9feb4dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7a9feb4fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd69fb5cd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd69fb5cf10&gt;]</pre>
 </div>
 
 </div>
