--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fead9b898d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f22627f4890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fead9bd1290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fead9ea55d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2262c00390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2262f72d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feada4864d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feada44de10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f22631a3bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f22631a3dd0&gt;]</pre>
 </div>
 
 </div>
