--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f48117266d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff4f78bf150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f48116ff490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f48116ff690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff4f80243d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff4f7cd9490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4811ca6d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4811ca6f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff4f82d7190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff4f827fd50&gt;]</pre>
 </div>
 
 </div>
