--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efe224a12d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc3f7c3f6d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efe228c1490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efe228c1690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3f81fe350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc3f81fe550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efe22e67e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efe22e67fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3f87a9cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc3f87a9ed0&gt;]</pre>
 </div>
 
 </div>
