--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc3f7c3f6d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f810a0220d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3f81fe350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc3f81fe550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8109fe58d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8109fe5fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3f87a9cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc3f87a9ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f810a592d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f810a592f10&gt;]</pre>
 </div>
 
 </div>
