--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbccc4311d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f49b332c890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbccb5543d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbccb5545d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49b2c9c390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49b2c9c590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbccbaf9c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbccbaf9e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49b3243c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49b3243e90&gt;]</pre>
 </div>
 
 </div>
