--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa3b1754f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff7a1ef7410&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa3b1750290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa3b1750490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7a22fc3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff7a22fc610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa3b1d56550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa3b1cfed90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7a28a2c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff7a28a2e50&gt;]</pre>
 </div>
 
 </div>
