--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efed70fe750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb6493cadd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efed73e6650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efed73e6290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb649777590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb649797410&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efed799c050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efed799c250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb649db2c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb649d3cd50&gt;]</pre>
 </div>
 
 </div>
