--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff963a063d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f733c841750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff963371510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff963371710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f733cc482d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f733cc484d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff963916d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff963916f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f733d1efb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f733d1efd10&gt;]</pre>
 </div>
 
 </div>
