--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f360c7739d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0591a905d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f360ca43450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f360ca43650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0591eab590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0591eab790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f360cfebc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f360cfebe90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0592451e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f059245d090&gt;]</pre>
 </div>
 
 </div>
