--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f267a4784d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb90d40dc10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f267a884e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f267a886550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb90d9df250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb90d9df450&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f267ae26710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f267ae2dd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb90dfd2590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb90df85d10&gt;]</pre>
 </div>
 
 </div>
