--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb93fdd2290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe7016b5f90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb94036d450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb94036d650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe701adb3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe701adb5d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb94092cd90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb94092cf90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe70207ecd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe70207eed0&gt;]</pre>
 </div>
 
 </div>
